# AgentProvenance

./: .gitignore  README.md  pyproject.toml  run_agent_provenance_system.sh
agent_provenance/: __init__.py  dashboard.py  parser.py  provenance.py
agent_provenance_backend/: README.md  app.py  joined_provenance.py
agent_provenance_react/: .gitignore  README.md  package-lock.json  package.json
agent_provenance_react/app/: globals.css  layout.tsx  page.tsx
agent_provenance_react/app/api/joined-provenance-graph/: route.ts
agent_provenance_react/app/api/provenance-agent/: route.ts
agent_provenance_react/app/api/provenance-dag/: route.ts
agent_provenance_react/app/api/tool-sets/: route.ts
agent_provenance_react/app/components/: provenance_copilot.tsx  provenance_copilot_agent.ts  provenance_graph.tsx  tool_call_tooltip.tsx  types.d.ts  upset_plot.js  visualization_shared.js
tests/: __init__.py  test_parser.py  test_provenance.py
